# mel_cepstral_distance

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  cli.py  pylintrc  pyproject.toml  setup.cfg  setup.py
mcd/: __init__.py  mcd_computation.py  mcd_computation.tests.py  parameters.py
src/: cli.py
src/mcd/: __init__.py  mcd_computation.py
src/mel_cepstral_distance/: __init__.py  alignment.py  api.py  computation.py  core.py  core_db.py  dtw.py  helper.py  mcd_computation.py  silence.py
src/mel_cepstral_distance_analysis/: analysis.py  helper.py
src/mel_cepstral_distance_analysis_tests/: test_align_1d_sequences_using_dtw.py  test_extract_frames_from_signal.py  test_fill_with_zeros_1d.py
src/mel_cepstral_distance_cli/: argparse_helper.py  calc_from_mel.py  calc_from_wav.py  cli.py  helper.py  logging_configuration.py  main.py  types.py
src/mel_cepstral_distance_old/: __init__.py  core.py  helper.py  mcd_computation.py  types.py
src/mel_cepstral_distance_old/tests/: test_get_metrics_mels_pairwise.py
src/mel_cepstral_distance_tests/: conftest.py  test_examples.py  test_get_mcd_dtw_db.py  test_get_metrics_mels_pairwise.py  test_get_metrics_wavs.py  test_mcd_computation.py
src/mel_cepstral_distance_tests/alignment_tests/: test_align_2d_sequences_using_dtw.py  test_fill_with_zeros_2d.py
src/mel_cepstral_distance_tests/api_tests/: test_compare_amplitude_spectrograms.py  test_compare_amplitude_spectrograms_other.pkl  test_compare_amplitude_spectrograms_sil.pkl  test_compare_audio_files.py  test_compare_audio_files_other.pkl  test_compare_audio_files_sil.pkl  test_compare_mel_spectrograms.py  test_compare_mel_spectrograms_other.pkl  test_compare_mel_spectrograms_sil.pkl  test_compare_mfccs.py  test_compare_mfccs_other.pkl  test_compare_mfccs_sil.pkl  test_get_amplitude_spectrogram.py  test_get_mel_spectrogram.pkl  test_get_mel_spectrogram.py  test_get_mfccs.pkl  test_get_mfccs.py
src/mel_cepstral_distance_tests/computation_tests/: test_adjust_win_len_to_n_fft.py  test_component.py  test_get_MCD_k.py  test_get_MCD_k_fast.py  test_get_MC_X_ik.py  test_get_MC_X_ik_fast.py  test_get_X_km.py  test_get_X_kn.py  test_get_X_kn_fast.py  test_get_average_MCD.py  test_get_w_n_m.py  test_hz_to_mel.py  test_mel_to_hz.py
src/mel_cepstral_distance_tests/dtw_tests/: test_align_1d_sequences_using_dtw.py  test_align_2d_sequences_using_dtw.py
src/mel_cepstral_distance_tests/helper_tests/: test_extract_frames_from_signal.py  test_fill_with_zeros_1d.py  test_fill_with_zeros_2d.py  test_hz_to_mel.py  test_mel_to_hz.py
src/scripts/: analysis.py
tests/: mcd_computation.tests.py  test_mcd_computation.py
