[project]
name = "mel-cepstral-distance"
version = "0.0.3"
description = "CLI and library to compute the Mel-Cepstral Distance of two WAV files based on the paper 'Mel-Cepstral Distance Measure for Objective Speech Quality Assessment' by Kubichek (1993)."
readme = "README.md"
requires-python = ">=3.8, <3.14"
license = { text = "MIT" }
authors = [
  { name = "Jasmin Sternkopf", email = "jasmin.sternkopf@mathematik.tu-chemnitz.de" },
  { name = "Stefan Taubert", email = "pypi@stefantaubert.com" },
]
maintainers = [{ name = "Stefan Taubert", email = "pypi@stefantaubert.com" }]
keywords = [
  "TTS",
  "Text-to-speech",
  "Speech synthesis",
  "MCD",
  "Mel",
  "DTW",
  "Dynamic Time Warping",
  "Cepstral",
  "Spectrogram",
  "Spectrum",
  "Distance",
  "Divergence",
  "Distortion",
  "Language",
  "Linguistics",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.22.4",
  "scipy>=1.8.0",
  "fastdtw>=0.3.4",
  # "librosa>=0.9.1",
  # "pandas>=2.0.0",
  # "tqdm>=4.63.0",
]

[project.urls]
Homepage = "https://github.com/jasminsternkopf/mel_cepstral_distance"
Issues = "https://github.com/jasminsternkopf/mel_cepstral_distance/issues"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["mel_cepstral_distance"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mel_cepstral_distance", "mel_cepstral_distance.*"]
exclude = [
  "mel_cepstral_distance_cli",
  "mel_cepstral_distance_cli.*",
  "mel_cepstral_distance_analysis",
  "mel_cepstral_distance_analysis.*",
  "mel_cepstral_distance_analysis_tests",
  "mel_cepstral_distance_analysis_tests.*",
  "mel_cepstral_distance_analysis_old",
  "mel_cepstral_distance_analysis_old.*",
  "mel_cepstral_distance_tests",
  "mel_cepstral_distance_tests.*",
  "mel_cepstral_distance_debug",
  "mel_cepstral_distance_debug.*",
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = ["src/mel_cepstral_distance_tests"]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = ["mel_cepstral_distance", "mel_cepstral_distance_cli"]
known_third_party = ["librosa", "numpy", "scipy", "fastdtw"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311,312,313}
isolated_build = True

[testenv]
deps = 
  pytest
commands = 
  pytest
"""

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"
