[metadata]
name = mcd
version = 1.0.0
author="Jasmin Sternkopf"
author_email="jasmin.sternkopf@mathematik.tu-chemnitz.de"
description="Computes the Mel-Cepstral Distance of two WAV files based on the paper 'Mel-Cepstral Distance Measure for Objective Speech Quality Assessment' by Robert F. Kubichek."
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/jasminsternkopf/mel_cepstral_distance"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    librosa
    numpy
    scipy
    fastdtw

[options.packages.find]
where = src